--- a/Home.html
+++ b/Home.html
@@ -18,12 +18,12 @@
 			
 			<ul> 
 				<!-- Links to toggle between pages -->
-				<li><a href="#">Home</a></li>
-				<li><a href="AboutUs.html">About Us</a></li>
-				<li><a href="Gallery.html">Gallery</a></li>
-				<li><a href="Login.html">SignUp/Login</a></li>
-				<li><a href="ContactUs.html">Contact Us</a></li>
-				<li><a href="Blog.html">Blog</a></li>
+				<li><a href="/Webd_group_project/Home.html">Home</a></li>
+				<li><a href="/Webd_group_project/AboutUs.html">About Us</a></li>
+				<li><a href="/Webd_group_project/Gallery.html">Gallery</a></li>
+				<li><a href="/Webd_group_project/Login.html">SignUp/Login</a></li>
+				<li><a href="/Webd_group_project/ContactUs.html">Contact Us</a></li>
+				<li><a href="/Webd_group_project/Blog.html">Blog</a></li>
                 <li><a href="Cart.html">Cart</a></li>
 			</ul>
 			<a href="https://th.bing.com/th/id/R.f575507c8e4bd67a92969c05205805db?rik=F6CDVPejuTXWaQ&riu=http%3a%2f%2frisingstarmbchurch.org%2frsmbc%2fwp-content%2fuploads%2f2018%2f01%2fwelcome-new-members.png&ehk=NMb%2fhRUtP311WvrIZFNG9hZ3fxyhOLMX3ExtC7Y9kso%3d&risl=&pid=ImgRaw&r=0" class="btn">Subscribe</a>
@@ -98,7 +98,7 @@
 	<!------Contact Us------>
 	<div class="contact-me">
 		<p>Website Tour</p>
-		<a class="button-two" href="#">Visit</a>
+		<a class="button-two" href="/Webd_group_project/Home.html">Visit</a>
 	</div>
 
 	<!------footer start--------->
@@ -106,9 +106,9 @@
 		
 		<p>Thanks for visiting our website. Have a good dayy!!</p>
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-twitter"></i></a>
+			<a href="/Webd_group_project/Home.html"><i class="fab fa-facebook-f"></i></a>
+			<a href="/Webd_group_project/Home.html"><i class="fab fa-instagram"></i></a>
+			<a href="/Webd_group_project/Home.html"><i class="fab fa-twitter"></i></a>
 		</div>
 		<p class="end">&copy</p>
 	</footer>
