--- a/Blog.html
+++ b/Blog.html
@@ -27,7 +27,7 @@
 <!-- background image -->
 <style>
     body {
-        background-image: url("images/blog\ bg\ image.jpg");
+        background-image: url("/Webd_group_project/blog\ bg\ image.jpg");
         background-repeat: repeat-y;
         background-attachment: fixed;
         background-size: 100%;
@@ -44,9 +44,9 @@
         <div class="nav-left">
             <span>iBlog</span>
             <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="AboutUs.html">About</a></li>
-                <li><a href="ContactUs.html">Contact</a></li>
+                <li><a href="/Webd_group_project/Home.html">Home</a></li>
+                <li><a href="/Webd_group_project/AboutUs.html">About</a></li>
+                <li><a href="/Webd_group_project/ContactUs.html">Contact</a></li>
 
             </ul>
 
@@ -81,7 +81,7 @@
 
                 <!-- img -->
                 <div class="blog-img">
-                    <img src="images/blog post 1.jpeg" alt="Blog">
+                    <img src="/Webd_group_project/blog post 1.jpeg" alt="Blog">
                 </div>
 
                 <section>
@@ -122,7 +122,7 @@
 
                 <!-- img -->
                 <div class="blog-img">
-                    <img src="images/blog post 2.jpeg" alt="Blog">
+                    <img src="/Webd_group_project/blog post 2.jpeg" alt="Blog">
                 </div>
 
                 <section>
@@ -160,7 +160,7 @@
 
                 <!-- img -->
                 <div class="blog-img">
-                    <img src="images/blog post 3.jpeg" alt="Blog">
+                    <img src="/Webd_group_project/blog post 3.jpeg" alt="Blog">
                 </div>
 
                 <!-- text -->
@@ -197,7 +197,7 @@
 
                 <!-- img -->
                 <div class="blog-img">
-                    <img src="images/blog post 4.jpeg" alt="Blog">
+                    <img src="/Webd_group_project/blog post 4.jpeg" alt="Blog">
                 </div>
 
                 <!-- text -->
@@ -235,7 +235,7 @@
 
                 <!-- img -->
                 <div class="blog-img">
-                    <img src="images/blog post 5.jpeg" alt="Blog">
+                    <img src="/Webd_group_project/blog post 5.jpeg" alt="Blog">
                 </div>
 
                 <!-- text -->
@@ -267,7 +267,7 @@
 
                 <!-- img -->
                 <div class="blog-img">
-                    <img src="images/blog post 6.jpeg" alt="Blog">
+                    <img src="/Webd_group_project/blog post 6.jpeg" alt="Blog">
                 </div>
 
                 <!-- text -->
@@ -328,10 +328,10 @@
 
     <footer class="footer">
         <h4>Follow us Here</h4>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-snapchat"></a>
+        <a href="/Webd_group_project/Home.html" class="fa fa-facebook"></a>
+        <a href="/Webd_group_project/Home.html" class="fa fa-twitter"></a>
+        <a href="/Webd_group_project/Home.html" class="fa fa-instagram"></a>
+        <a href="/Webd_group_project/Home.html" class="fa fa-snapchat"></a>
     </footer>
     <hr>
 
