--- a/AboutUs.html
+++ b/AboutUs.html
@@ -39,7 +39,7 @@
                         reach there at time.
                     </p>
                     <div class="button">
-                        <a href="Reviews.html">Reviews</a>
+                        <a href="/Webd_group_project/Reviews.html">Reviews</a>
                     </div>
                 </div>
                 <div class="social">
